# code-translator

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  Dockerfile  INSTALLATION.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RUNTIME_FIXES.md  check_system.py  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements.txt  run.py  setup.py  start.bat  start.sh  test_app.py  test_basic.py  test_comprehensive.py  test_openai_compatibility.py  test_runtime_fixes.py
.github/workflows/: ci.yml
docs/: API.md  USER_MANUAL.md  screenshots.md
e2e/: __init__.py  conftest.py  test_api.py  test_cli.py  test_integration.py
examples/: README.md  complex_class.py  javascript_example.js  python_example.py
github-action/: Dockerfile  README.md  action.yml  entrypoint.py  sample-workflow.yml
pre-commit-hook/: .pre-commit-hooks.yaml  README.md  code_translator_hook.py  example-pre-commit-config.yaml
src/: __main__.py  main.py  main_advanced.py
src/analyzer/: __init__.py  complexity.py
src/config/: config_manager.py  settings.py
src/error_handling/: __init__.py  error_framework.py
src/gui/: history_dialog.py  main_window.py  widgets.py
src/lifecycle/: __init__.py  app_manager.py
src/providers/: __init__.py  implementations.py  provider_framework.py
src/translator/: notebook_handler.py  offline_translator.py  test_generator.py  translator_engine.py
src/utils/: api_compatibility.py  dependency_checker.py  logger.py  shortcuts.py
src/web/: __init__.py  app.py
src/web/templates/: index.html
tests/: test_advanced_architecture.py  test_api_compatibility.py  test_cli_and_languages.py
vscode-extension/: README.md  package.json
